@@ -1,3 +1,4 @@
+
 == 1.0.9.8 ==
 - fixed a parsing bug in SpreadsheetService
 - fixed a bug in GDataRequestException that would prevent AppsException from accessing the server's response.
@@ -9,7 +10,7 @@
 - added ACL support. This resulted in changes in the CalendarService.Query method - as a CalendarService
   can now return an EventFeed or an AccessControlFeed is returns now an AtomFeed that you can cast to what
   you are expecting.
-
+- added a cmd line tool to query/insert/update to a service based on streams
 
 == 1.0.9.7 ==
 - fixed an incorrect trace statement in request.cs that had the result of disabling reading the error response.
